# anndata

.github/workflows/: anndata-cpp.yml
anndata_cpp/: CMakeLists.txt  Doxyfile.in  README.md  inspect_h5ad.py  write_test_data.py
anndata_cpp/include/anndata_cpp/: anndata.hpp
anndata_cpp/src/: anndata.cpp  hdf5_api.hpp  main.cpp
anndata_cpp/test_data/: test.h5ad
anndata_cpp/tests/: test_main.cpp
